--- a/c++/01const/1.md
+++ b/c++/01const/1.md
@@ -12,4 +12,11 @@
     - const关键字
       - const常量必须赋初值
       - const常量值定义后不能改变
-      - 通过指针可以修改const常量的值，但是需要注意编译器优化。
+      - 通过指针可以修改const常量的值，但是需要注意编译器优化
+      - const在C语言中的表示是不可以修改值的变量，而C++中是常量
+      - const在C++中定义的常量是内部链接，可以添加extern关键字修改为外部链接，一处定义，多处声明使用。在C语言中默认是外部链接，不需要添加extern关键字。
+
+    - const + 指针
+      - const T*/T const* 表示不能修改指针指向的内容，指针本身的值是可以修改。
+      - T* const 表示是该指针是一个常量，意味指针本身的值不能被修改，但是指针指向的内容可以修改。
+      - const T * const表示指针指向的内容及指针本身均不能改变。
