--- a/c++/18try/异常.md
+++ b/c++/18try/异常.md
@@ -24,7 +24,7 @@ struct A {
 //请判断下面代码的输出结果，并解释为什么会出现这种情况。
 // #3
 template<typename T> struct B {
-    double x;
+    double x1;
 };
 
 int x = 16;
